# aads-server

./: .active_container  .cursorrules  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOVER.md  Makefile  README.md  RESULT-searxng-priority.md  RESULT.md  RESULT_STREAMING.md  RESULT_saas_auth.md  RESULT_searxng_priority.md  RESULT_streaming.md  RUNNER_TEST_M.md  RUNNER_TEST_XS.md  aads.service  appium.service  conversations_standalone.py  deploy.sh  docker-compose.crawl4ai.yml  docker-compose.langfuse.yml  docker-compose.prod.yml  docker-compose.yml  fly.toml  litellm-config.yaml  nginx-aads-upstream.conf  nginx-aads.conf  pyproject.toml  supervisord.conf  watchdog-host.sh
android_agent/: README.md  build_debug_apk.sh  settings.gradle
app/: _tmp_ModelSelector.tsx  _tmp_kakaobot_prompt.json  auth.py  auth.py.bak_manual  checkpoints.py  config.py  logging_config.py  main.py  main.py.bak_aads  tmp_docs_page.tsx
data/: ai_memory.json
device_sdk/: __init__.py  client.py  dispatcher.py  heartbeat.py  models.py  plugin.py
docs/: 20260429_V2_DESIGN_PAGE_FULL_AUDIT.md  AUTH_GUARD.md  AUTH_SPEC_v2.md  BLUEGREEN_DEPLOY_SPEC.md  CHANGELOG-dashboard-direct.md  CHANGELOG-direct-edit.md  CHANGELOG-go100-direct.md  CLAUDE_CLI_TO_AGENT_SDK_MIGRATION.md  DASHSCOPE_INTEGRATION.md  HANDOVER.md  LLM_MODELS_REGISTRY.md  MEMORY_EVOLUTION_ARCHITECTURE.md  NEWTALK-QA-INTEGRATION.md  ProductController_AADS.php  SHORTFLOW-QA-INTEGRATION.md  SYSTEM_PROMPT_ARCHITECTURE.md  SYSTEM_PROMPT_OPTIMIZATION_REPORT.md  appium.service  hook_sed_test.md
mcp_servers/: __init__.py  aads_tools_bridge.py  aads_tools_bridge.py.bak_aads  filesystem_server.py  git_server.py  (+1 more)
(+734 files in other folders)
